# April-Compiler

./: .clang  .gitignore  .test.s.swp  CMakeLists.txt  Main  Main.cpp  Makefile  README.md  april  april-requeriment  april_session  aun.txt  buildfn.h  codegen.cpp  codegen.h  cosas_por_hacer.txt  leer.cpp  lexer.cpp  lexer.l  main.cpp  makefile  node.h  p.bc  parser.cpp  parser.h  parser.y  paser.cpp  prueba  ptr_code.txt  requisitos.txt  test.cpp  test.ll  test.s  test.txt  ~flex_temp_out_main_a15288
headers/: assignment.hpp  binaryope.hpp  block.hpp  codegencontext.hpp  double.hpp  exprstatement.hpp  for.hpp  funclist.hpp  function.hpp  if.hpp  integer.hpp  list.hpp  listaccess.hpp  methodcall.hpp  methodhandle.hpp  methodstruct.hpp  node.hpp  scope.hpp  statement.hpp  string.hpp  stringarray.hpp  symbol.hpp  symbolTable.hpp  value.hpp  varDeclarationDeduce.hpp  vardeclaration.hpp
include/: .codegenblock.hpp.swp  .codegencontext.hpp.swp  array.hpp  arrayaccess.hpp  arrayaddelement.hpp  assigbiope.hpp  assignment.hpp  assignmentarray.hpp  bioperator.hpp  block.hpp  boolean.hpp  codegenblock.hpp  codegencontext.hpp  comparasionope.hpp  conditional.hpp  double.hpp  errors.hpp  expression.hpp  exprstatement.hpp  forloop.hpp  function.hpp  identifier.hpp  integer.hpp  logicope.hpp  methodcall.hpp  msg.hpp  nativefn.hpp  node.hpp  return.hpp  scope.hpp  statement.hpp  string.hpp  unaryope.hpp  vardeclaration.hpp  vardeclarationdeduce.hpp  vardeclarationref.hpp
scr/: symbolTable.cpp
src/: .codegencontext.cpp.swp  .return.cpp.swp  array.cpp  arrayaccess.cpp  arrayaddelement.cpp  assigbiope.cpp  assignment.cpp  assignmentarray.cpp  assignmentlist.cpp  binaryope.cpp  bioperator.cpp  block.cpp  boolean.cpp  booleancmp.cpp  codegencontext.cpp  comparasionope.cpp  conditional.cpp  double.cpp  errors.cpp  exprstatement.cpp  for.cpp  forloop.cpp  funclist.cpp  function.cpp  identifier.cpp  if.cpp  integer.cpp  lexer.l  list.cpp  listaccess.cpp  logicope.cpp  methodcall.cpp  methodhandle.cpp  methodhandlecast.cpp  methodhandleio.cpp  methodhandlelist.cpp  methodstruct.cpp  msg.cpp  nativefn.cpp  parser.y  (+10 more)
test/: ambitos.april  fibonacci.april  ficheros.april  globales.april  listas.april  num_ares.april  resta.april  test.april  test.lore  test_arrayString.april  test_func.april  test_import.april  test_lis.april  test_opeString.april  var.lore
test_april/: .fibonacci.april.swp  .test_0.april.swp  ambitos.april  array.april  bucle_for.april  fibonacci.april  global.april  hello_world.april  punteros.april  raiz_newton.april  test_0.april  test_1.april
